# HideAndSeek

Frontend/: README.md  pubspec.yaml
Frontend/android/app/: build.gradle
Frontend/android/app/src/main/: AndroidManifest.xml
Frontend/ios/Runner/: Info.plist
Frontend/ios/Runner.xcodeproj/: project.pbxproj
Frontend/lib/: main.dart
Frontend/linux/: CMakeLists.txt  my_application.cc
Frontend/macos/Runner.xcodeproj/: project.pbxproj
Frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
Frontend/macos/Runner/Configs/: AppInfo.xcconfig
Frontend/web/: index.html  manifest.json
Frontend/windows/: CMakeLists.txt
Frontend/windows/runner/: Runner.rc  main.cpp
backend/: Cargo.toml
backend/src/: client.rs  json.rs  main.rs  message.rs  server.rs  session.rs  socket_message.rs  util.rs
frontend/lib/: json.dart
hide_and_seek/: README.md  pubspec.yaml
hide_and_seek/android/app/: build.gradle
hide_and_seek/android/app/src/main/: AndroidManifest.xml
hide_and_seek/ios/Runner.xcodeproj/: project.pbxproj
hide_and_seek/lib/: camera.dart  chat.dart  connection.dart  location.dart  main.dart  message.dart  notifications.dart  util.dart
hide_and_seek/lib/pages/: connected.dart  disconnected.dart  in_game.dart
hide_and_seek/linux/: CMakeLists.txt
hide_and_seek/macos/Runner.xcodeproj/: project.pbxproj
hide_and_seek/macos/Runner/Configs/: AppInfo.xcconfig
hide_and_seek/web/: index.html
hide_and_seek/windows/: CMakeLists.txt
hide_and_seek/windows/runner/: Runner.rc
(+3 files in other folders)
