[package]
name = "hide_and_seek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-web-actors = "4.2.0"
actix = "0.13.0"

rand = "0.8.5"
env_logger = "0.10.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

geo = "0.26.0"